--- a/style.css
+++ b/style.css
@@ -4,45 +4,72 @@ html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.nav {
-    background-color: #047857;
-    padding: 15px;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
+    height: 100%;
+}
+
+.navbar {
+    grid-row: span 2;
+
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    gap: 10px;
+
+    background-color: #047857;
+    color: #ecfdf5; 
+    padding: 15px;
+    align-items: center;
+    font-weight: 500;
+}
+
+    .dashboard {
+        font-size: 1.5em;
+    }
+
+    .logo {
+        height: 2em;
+        width: 2em;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 5px;
+    }
+
+    .logo > .flex-container1, .logo > .flex-container2 {
+        display: grid;
+        gap: 5px;
+    }
+
+    .logo > .flex-container1 {
+        grid-template-rows: 2fr 1fr;
+    }
+
+    .logo > .flex-container2 {
+        grid-template-rows: 1fr 2fr;
+    }
+
+    .logo > .flex-container1 > *, .logo > .flex-container2 > *  {
+        background-color: #ecfdf5;
+    }
+
+    svg.nav-icon {
+        width: 1.5em;
+        color: #ecfdf5;
+    }
 
 .header {
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    color: #ecfdf5;
-    font-weight: 500;
-    font-size: 1.5em;
-}
-
-.header > .logo {
-    height: 2em;
-    width: 2em;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 5px;
-}
-
-.logo > .flex-container1, .logo > .flex-container2 {
-    display: grid;
-    gap: 5px;
-}
-
-.logo > .flex-container1 {
-    grid-template-rows: 2fr 1fr;
-    gap: 5px;
-}
-
-.logo > .flex-container2 {
-    grid-template-rows: 1fr 2fr;
-    gap: 5px;
-}
-
-.logo > .flex-container1 > *, .logo > .flex-container2 > *  {
     background-color: #ecfdf5;
 }
 
+.content {
+    background-color: #d1fae5;
+}
