--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
-html, body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    /* border: 10px dashed black; */
+    border-radius: 10px;
+
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
+
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 150px 1fr;
 }
 
 ul {
@@ -10,26 +22,30 @@ ul {
     padding: 0;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
-    height: 100%;
-}
-
 .navbar {
     grid-row: span 2;
 
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 40px 1fr;
     gap: 10px;
 
     background-color: #047857;
     color: #ecfdf5; 
-    padding: 15px;
+    padding: 20px;
     align-items: center;
+    align-content: start;
+    justify-content: start;
     font-weight: 500;
 }
+
+
+.navbar > * {
+    /* border: 1px solid blue; */
+}
+
+    .settings, .home {
+        margin-top: 30px;
+    }
 
     .dashboard {
         font-size: 1.5em;
@@ -42,28 +58,36 @@ ul {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 5px;
+
+        justify-self: center;
     }
 
-    .logo > .flex-container1, .logo > .flex-container2 {
-        display: grid;
-        gap: 5px;
-    }
+        .logo > .flex-container1, .logo > .flex-container2 {
+            display: grid;
+            gap: 5px;
+        }
 
-    .logo > .flex-container1 {
-        grid-template-rows: 2fr 1fr;
-    }
+        .logo > .flex-container1 {
+            grid-template-rows: 2fr 1fr;
+        }
 
-    .logo > .flex-container2 {
-        grid-template-rows: 1fr 2fr;
-    }
+        .logo > .flex-container2 {
+            grid-template-rows: 1fr 2fr;
+        }
 
-    .logo > .flex-container1 > *, .logo > .flex-container2 > *  {
-        background-color: #ecfdf5;
-    }
+        .logo > .flex-container1 > *, .logo > .flex-container2 > *  {
+            background-color: #ecfdf5;
+        }
 
     svg.nav-icon {
-        width: 1.5em;
+        width: 25px;
+        padding: 0;
         color: #ecfdf5;
+        justify-self: center;
+    }
+
+    .nav-text {
+        font-size: 1em;
     }
 
 .header {
@@ -71,5 +95,63 @@ ul {
 }
 
 .content {
+    display: flex;
+    flex-wrap: wrap;
+    /* grid-template-columns: 4.5fr 1fr; */
+
+    gap: 20px;
+
     background-color: #d1fae5;
-}
+    padding: 40px;
+}   
+
+    /* Contains project cards */
+    .project-container {
+        flex: 1 1 70%;
+
+        /* border: 2px dashed black; */
+        display: flex;
+        flex-direction: column;
+
+
+    }
+
+        .project-cards {
+            /* border: 2px solid black; */
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+            gap: 20px;
+
+            height: 100%;
+        }
+
+    /* Contains announcement and trending cards */
+    .side-container {
+        flex: 1 1 200px;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        gap: 20px;
+
+        /* border: 2px dashed black; */
+    }
+
+        /* Flex items inside grid so that it can stretch to fit */
+        .trending-container, .announcement-container {
+            display: flex;
+            flex-direction: column;
+        }
+
+            .trending-card, .announcement-card {
+                height: 100%;
+            }
+
+    .container-header {
+        padding: 10px;
+    }
+    
+    .card {
+        padding: 20px;
+        border-radius: 8px;
+        background-color: #ecfdf5;
+        box-shadow: 5px 5px 3px rgb(190, 215, 198);
+    }
