--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 
 body {
     /* border: 10px dashed black; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
@@ -25,7 +25,7 @@ body {
     /* Layout of the whole page */
     display: grid;
     grid-template-columns: 1fr 4.5fr;
-    grid-template-rows: 200px 4fr;
+    grid-template-rows: min-content 1fr;
 }
 
 ul {
@@ -106,16 +106,14 @@ header {
     background-color: var(--header-bgd);
 
     display: grid;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 2fr;
     align-content: space-between;
-    gap: 0;
+    gap: 8%;
 
-    padding-top: 20px;
-    padding-bottom: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 20px 40px;
 }
 
+    /* First row on the header section */
     header > section:first-child {
         /* border: 1px dashed blue; */
 
@@ -125,12 +123,7 @@ header {
         align-content: center;
     }
 
-    header > section:first-child > * {
-        /* border: 1px solid black; */
-    }
-
         .profile-img {
-            flex-shrink: 0;
             background-color: rgb(215, 215, 51);
             border-radius: 100%;
         }
@@ -169,7 +162,7 @@ header {
             flex-shrink: 0;
         }
 
-        .notification-seciton > div:last-child {
+        .notification-section > div:last-child {
             min-width: 0;
             white-space: nowrap;
             overflow: hidden;
@@ -179,11 +172,15 @@ header {
             flex-shrink: 0;
             color: var(--navbar-bgd);
         }
-
+    
+    /* Second row on the header section */
     header > section:nth-child(2) {
         /* border: 1px dashed black; */
         display: flex;
-        justify-content: space-between;       
+        flex-wrap: wrap;
+        gap: 20px;
+
+        justify-content: space-between;
     }
 
         .profile-section {
@@ -195,6 +192,9 @@ header {
 
             row-gap: 4px;
             column-gap: 20px;
+
+            margin-right: auto;
+ 
         }
 
             .profile-section > .profile-img {
@@ -212,8 +212,12 @@ header {
             }
 
             .profile-section > div:nth-child(3) {
+                /* border: 1px solid blue; */
+
                 align-self: start;
                 font-size: 1.2em;
+
+                white-space: nowrap;
             }
     
         .button-section {
@@ -222,6 +226,9 @@ header {
             display: flex;
             align-items: center;
             gap: 20px;
+
+        
+            margin-left: auto;
         }
 
             button {
@@ -244,8 +251,8 @@ main {
 
     background-color: var(--dashboard-bgd);
     padding-top: 20px;
-    padding-bottom: 60px;
-    padding-left: 20px;
+    padding-bottom: 2.2vw;
+    padding-left: 30px;
     padding-right: 30px;
 }   
 
